--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,38 +1,59 @@
-name: Dictyexpress-js CI
+name: Dictyexpress-js build
 
 on:
-  push:
-    branches:
-      - master
-    tags:
-      - "[0-9]+.[0-9]+.[0-9]+*"
-  workflow_dispatch:
+    push:
+        branches:
+            - master
+        tags:
+            - '[0-9]+.[0-9]+.[0-9]+*'
+    workflow_dispatch:
+
+env:
+    AWS_REGION: us-east-1
+    NODE_VERSION: 16.x
+    S3_BUCKET: genialis-share-ci-artifact-eu-west-1
+    S3_BUCKET_PREFIX: dictyexpress-js
 
 jobs:
-  test:
-    runs-on: ubuntu-20.04
-    strategy:
-      matrix:
-        node-version: [12.x]
+    build:
+        runs-on: ubuntu-20.04
+        steps:
+            - uses: actions/checkout@v2
+            - name: Configure AWS Credentials
+              uses: aws-actions/configure-aws-credentials@v1
+              with:
+                  aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                  aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                  aws-region: ${{ env.AWS_REGION }}
+            - name: Use Node.js ${{ env.NODE_VERSION }}
+              uses: actions/setup-node@v2
+              with:
+                  node-version: ${{ env.NODE_VERSION }}
+            - name: Generate environment variables
+              run: |
+                  # All triggers.
+                  SHORT_SHA=$(git rev-parse --short HEAD)
+                  VERSION="dev-${SHORT_SHA}"
 
-    steps:
-      - uses: actions/checkout@v2
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: Install NPM packages
-        run: npm --cache-min 86400 install
-      - name: Build staging bundle
-        env: 
-          REACT_APP_DEPLOY_ENV: "staging"
-          REACT_APP_COMMIT_SHA: ${{ github.sha }}
-        run: npm run build
-      - name: Deploy staging build to S3 bucket
-        run: aws s3 sync ./build/ s3://dictyexpress-qa-genialis-io --delete
+                  # Override VERSION in tagged commits.
+                  if ${{ github.ref_type == 'tag' }};
+                  # Do not wrap conditions in brackets or quotes here, since bash would evaluate it as a string.
+                  then
+                    VERSION=${{ github.ref_name }}
+                  fi
+
+                  # Set environment for later steps.
+                  echo "VERSION=$VERSION" >> $GITHUB_ENV
+                  echo "FILENAME=expressions-ui-$VERSION.tar.gz" >> $GITHUB_ENV
+            - name: Install NPM packages
+              run: yarn
+            - name: Build bundle
+              env:
+                  REACT_APP_DEPLOY_ENV: 'staging'
+                  REACT_APP_COMMIT_SHA: ${{ github.sha }}
+              run: yarn build
+            - name: Compress the build folder
+              run: tar -czf ${{ env.FILENAME }} ./build/
+            - name: Copy the bundle to the S3 bucket
+              run: |
+                  aws s3 cp ${{ env.FILENAME }} s3://${{ env.S3_BUCKET }}/${{ env.S3_BUCKET_PREFIX }}/${{ env.FILENAME }}
