--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,42 +1,52 @@
 name: Dictyexpress-js CI
 
 on:
-  push:
-    branches:
-      - master
-    tags:
-      - "[0-9]+.[0-9]+.[0-9]+*"
-  pull_request:
-    branches:
-      - master
-  workflow_dispatch:
+    push:
+        branches:
+            - master
+        tags:
+            - '[0-9]+.[0-9]+.[0-9]+*'
+    pull_request:
+        branches:
+            - master
+    workflow_dispatch:
 
 jobs:
-  test:
-    runs-on: ubuntu-20.04
-    strategy:
-      matrix:
-        node-version: [12.x]
-
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: Install NPM packages
-        run: npm --cache-min 86400 install
-      - name: Run Linters
-        run: npm run lint
-      - name: Run Tests
-        run: npm test
-      - name: Run build
-        run: npm run build
-      - uses: microsoft/playwright-github-action@v1
-      - name: Run E2E tests
-        env:
-          LOGIN_USERNAME: ${{ secrets.QA2_LOGIN_USERNAME }}
-          LOGIN_PASSWORD: ${{ secrets.QA2_LOGIN_PASSWORD }}
-          CI: true
-          START_BUILD_SERVER: true
-        run: npm run e2e:debug
+    test:
+        runs-on: ubuntu-20.04
+        strategy:
+            matrix:
+                node-version: [16.x]
+        steps:
+            - uses: actions/checkout@v2
+            - name: Use Node.js ${{ matrix.node-version }}
+              uses: actions/setup-node@v2
+              with:
+                  node-version: ${{ matrix.node-version }}
+            - name: Get yarn cache directory path
+              id: yarn-cache-dir-path
+              run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
+            - name: Restore yarn cache
+              uses: actions/cache@v2
+              id: yarn-cache
+              with:
+                  path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+                  key: yarn-cache-folder-${{ hashFiles('**/yarn.lock', '.yarnrc.yml') }}
+                  restore-keys: |
+                      yarn-cache-folder-
+            - name: Install packages
+              run: yarn
+            - name: Install Playwright dependencies
+              run: yarn playwright install chromium
+            - name: Run Linters
+              run: yarn lint
+            - name: Run Tests
+              run: yarn test
+            - name: Run build
+              run: yarn build
+            - name: Run E2E tests
+              env:
+                  LOGIN_USERNAME: ${{ secrets.QA2_LOGIN_USERNAME }}
+                  LOGIN_PASSWORD: ${{ secrets.QA2_LOGIN_PASSWORD }}
+                  CI: true
+              run: yarn e2e
