--- a/package.json
+++ b/package.json
@@ -3,44 +3,44 @@
     "version": "0.1.0b14",
     "private": true,
     "dependencies": {
-        "@emotion/react": "^11.8.2",
-        "@emotion/styled": "^11.8.1",
+        "@emotion/react": "^11.10.5",
+        "@emotion/styled": "^11.10.5",
         "@genialis/resolwe": "^17.1.0",
-        "@mui/icons-material": "^5.5.1",
-        "@mui/material": "^5.5.2",
-        "@mui/styled-engine-sc": "^5.5.2",
-        "@reduxjs/toolkit": "^1.5.0",
-        "@sentry/browser": "^6.19.1",
+        "@mui/icons-material": "^5.10.14",
+        "@mui/material": "^5.10.14",
+        "@mui/styled-engine-sc": "^5.10.14",
+        "@reduxjs/toolkit": "^1.9.0",
+        "@sentry/browser": "^7.19.0",
         "@types/lz-string": "^1.3.34",
-        "@types/react-grid-layout": "^1.1.1",
-        "@types/uuid": "^8.3.0",
-        "@types/webpack-env": "^1.16.0",
-        "ag-grid-community": "^27.1.0",
-        "ag-grid-react": "^27.1.0",
-        "history": "^5.2.0",
-        "jszip": "^3.5.0",
-        "lodash": "^4.17.20",
+        "@types/react-grid-layout": "^1.3.2",
+        "@types/uuid": "^8.3.4",
+        "@types/webpack-env": "^1.18.0",
+        "ag-grid-community": "^28.2.1",
+        "ag-grid-react": "^28.2.1",
+        "history": "^5.3.0",
+        "jszip": "^3.10.1",
+        "lodash": "^4.17.21",
         "lz-string": "^1.4.4",
-        "notistack": "^2.0.3",
-        "react": "^17.0.1",
+        "notistack": "^2.0.8",
+        "react": "^17.0.2",
         "react-cookie-consent": "^8.0.1",
-        "react-dom": "^17.0.1",
-        "react-grid-layout": "^1.2.0",
-        "react-redux": "^7.2.2",
-        "react-router-dom": "^6.2.2",
-        "react-scripts": "^5.0.0",
+        "react-dom": "^17.0.2",
+        "react-grid-layout": "^1.3.4",
+        "react-redux": "^8.0.5",
+        "react-router-dom": "^6.4.3",
+        "react-scripts": "^5.0.1",
         "react-sizeme": "^3.0.2",
-        "react-slick": "^0.28.0",
-        "redux": "^4.0.5",
+        "react-slick": "^0.29.0",
+        "redux": "^4.2.0",
         "redux-observable": "^2.0.0",
-        "rxjs": "^7.5.5",
-        "sass": "^1.49.9",
+        "rxjs": "^7.5.7",
+        "sass": "^1.56.1",
         "slick-carousel": "^1.8.1",
-        "styled-components": "^5.2.1",
-        "uuid": "^8.3.2",
-        "vega": "^5.19.1",
+        "styled-components": "^5.3.6",
+        "uuid": "^9.0.0",
+        "vega": "^5.22.1",
         "vega-tooltip": "^0.28.0",
-        "webpack-cli": "^4.5.0"
+        "webpack-cli": "^4.10.0"
     },
     "jest": {
         "resetMocks": false
@@ -73,50 +73,51 @@
         ]
     },
     "devDependencies": {
-        "@jest/globals": "^27.5.1",
-        "@jest/types": "^27.5.1",
-        "@playwright-testing-library/test": "^4.2.0",
-        "@playwright/test": "^1.20.0",
-        "@sentry/webpack-plugin": "^1.14.0",
-        "@testing-library/jest-dom": "^5.11.9",
-        "@testing-library/react": "^12.1.4",
-        "@testing-library/user-event": "^13.5.0",
-        "@types/jest": "^27.4.1",
-        "@types/jsdom": "^16.2.6",
-        "@types/lodash": "^4.14.168",
-        "@types/react": "^17.0.41",
-        "@types/react-dom": "^17.0.0",
-        "@types/react-redux": "^7.1.16",
-        "@types/react-router-dom": "^5.1.7",
-        "@types/react-slick": "^0.23.4",
-        "@types/redux-mock-store": "^1.0.2",
-        "@types/styled-components": "^5.1.7",
-        "@typescript-eslint/eslint-plugin": "^5.16.0",
-        "@typescript-eslint/parser": "^5.16.0",
-        "browser-sync": "^2.26.14",
+        "@jest/globals": "^29.3.1",
+        "@jest/types": "^29.3.1",
+        "@playwright-testing-library/test": "^4.5.0",
+        "@playwright/test": "^1.27.1",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^12.1.5",
+        "@types/jest": "^29.2.3",
+        "@types/jsdom": "^20.0.1",
+        "@types/lodash": "^4.14.189",
+        "@types/node": "^18.11.9",
+        "@types/react": "^18.0.25",
+        "@types/react-dom": "^18.0.9",
+        "@types/react-redux": "^7.1.24",
+        "@types/react-router-dom": "^5.3.3",
+        "@types/react-slick": "^0.23.10",
+        "@types/redux-mock-store": "^1.0.3",
+        "@types/styled-components": "^5.1.26",
+        "@typescript-eslint/eslint-plugin": "5.43.0",
+        "@typescript-eslint/parser": "5.43.0",
+        "browser-sync": "^2.27.10",
         "cross-env": "^7.0.3",
         "env-cmd": "^10.1.0",
-        "eslint": "^8.11.0",
+        "eslint": "^8.27.0",
         "eslint-config-airbnb": "^19.0.4",
-        "eslint-config-airbnb-typescript": "^16.1.4",
+        "eslint-config-airbnb-typescript": "^17.0.0",
         "eslint-config-prettier": "^8.5.0",
-        "eslint-config-react-app": "^7.0.0",
-        "eslint-plugin-import": "^2.22.1",
-        "eslint-plugin-prettier": "^4.0.0",
-        "eslint-plugin-react-hooks": "^4.3.0",
-        "express": "^4.17.1",
-        "http-proxy-middleware": "^2.0.4",
-        "jest-canvas-mock": "^2.3.1",
+        "eslint-config-react-app": "^7.0.1",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "express": "^4.18.2",
+        "http-proxy-middleware": "^2.0.6",
+        "jest-canvas-mock": "^2.4.0",
         "jest-environment-jsdom-sixteen": "^2.0.0",
         "jest-fetch-mock": "^3.0.3",
-        "jest-image-snapshot": "^4.3.0",
-        "jest-playwright-preset": "^1.4.5",
-        "jsdom": "^19.0.0",
-        "mock-socket": "^9.0.3",
+        "jest-image-snapshot": "^6.0.0",
+        "jest-playwright-preset": "^2.0.0",
+        "jsdom": "^20.0.2",
+        "mock-socket": "^9.1.5",
         "npm-run-all": "^4.1.5",
-        "prettier": "^2.2.1",
+        "prettier": "^2.7.1",
         "redux-mock-store": "^1.5.4",
-        "typescript": "^4.6.2"
+        "typescript": "^4.9.3"
     },
-    "packageManager": "yarn@3.2.0"
+    "packageManager": "yarn@3.2.4",
+    "engines": {
+        "node": ">=18"
+    }
 }
