--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
         "@mui/material": "^5.14.0",
         "@mui/styled-engine-sc": "^5.12.0",
         "@react-hook/resize-observer": "^1.2.6",
-        "@reduxjs/toolkit": "^1.9.0",
+        "@reduxjs/toolkit": "^1.9.5",
         "@sentry/browser": "^7.19.0",
         "@types/lz-string": "^1.3.34",
         "@types/react-grid-layout": "^1.3.2",
-        "@types/uuid": "^8.3.4",
-        "@types/webpack-env": "^1.18.0",
+        "@types/uuid": "^9.0.2",
+        "@types/webpack-env": "^1.18.1",
         "ag-grid-community": "^28.2.1",
         "ag-grid-react": "^28.2.1",
         "history": "^5.3.0",
@@ -26,12 +26,12 @@
         "react-dom": "^18.2.0",
         "react-grid-layout": "^1.3.4",
         "react-redux": "^8.1.1",
-        "react-router-dom": "^6.4.3",
+        "react-router-dom": "^6.14.2",
         "react-scripts": "^5.0.1",
         "react-slick": "^0.29.0",
-        "redux": "^4.2.0",
+        "redux": "^4.2.1",
         "redux-observable": "^2.0.0",
-        "rxjs": "^7.5.7",
+        "rxjs": "^7.8.1",
         "sass": "^1.56.1",
         "slick-carousel": "^1.8.1",
         "styled-components": "^5.3.6",
@@ -89,7 +89,7 @@
         "@types/styled-components": "^5.1.26",
         "@typescript-eslint/eslint-plugin": "5.62.0",
         "@typescript-eslint/parser": "5.62.0",
-        "browser-sync": "^2.27.10",
+        "browser-sync": "^2.29.3",
         "cross-env": "^7.0.3",
         "env-cmd": "^10.1.0",
         "eslint": "^8.45.0",
@@ -101,20 +101,21 @@
         "eslint-plugin-prettier": "^5.0.0",
         "express": "^4.18.2",
         "http-proxy-middleware": "^2.0.6",
-        "jest-canvas-mock": "^2.4.0",
+        "jest-canvas-mock": "^2.5.2",
         "jest-environment-jsdom-sixteen": "^2.0.0",
         "jest-fetch-mock": "^3.0.3",
-        "jest-image-snapshot": "^6.0.0",
+        "jest-image-snapshot": "^6.1.0",
         "jest-playwright-preset": "^2.0.0",
         "jsdom": "^20.0.2",
-        "mock-socket": "^9.1.5",
+        "mock-socket": "^9.2.1",
         "npm-run-all": "^4.1.5",
         "prettier": "^3.0.0",
         "redux-mock-store": "^1.5.4",
         "typescript": "^4.9.3"
     },
     "resolutions": {
-        "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest"
+        "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
+        "rxjs": "^7.8.1"
     },
     "packageManager": "yarn@3.2.4",
     "engines": {
