--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "jszip": "^3.10.1",
         "lodash": "^4.17.21",
         "lz-string": "^1.5.0",
+        "ml-distance-matrix": "^2.0.1",
+        "ml-matrix": "^6.11.1",
         "notistack": "^2.0.8",
         "react": "^18.2.0",
         "react-cookie-consent": "^8.0.1",
