--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "@mui/material": "^5.16.7",
         "@mui/styled-engine-sc": "^5.14.12",
         "@react-hook/resize-observer": "^1.2.6",
-        "@reduxjs/toolkit": "^1.9.5",
+        "@reduxjs/toolkit": "^2.2.7",
         "@sentry/browser": "^7.59.2",
         "@types/lz-string": "^1.5.0",
         "@types/react-grid-layout": "^1.3.2",
@@ -34,11 +34,11 @@
         "react-cookie-consent": "^8.0.1",
         "react-dom": "^18.2.0",
         "react-grid-layout": "^1.3.4",
-        "react-redux": "^8.1.1",
+        "react-redux": "^9.1.2",
         "react-router-dom": "^6.14.2",
         "react-slick": "^0.29.0",
-        "redux": "^4.2.1",
-        "redux-observable": "^2.0.0",
+        "redux": "^5.0.1",
+        "redux-observable": "^3.0.0-rc.2",
         "rxjs": "^7.8.1",
         "slick-carousel": "^1.8.1",
         "styled-components": "^6.1.12",
@@ -144,10 +144,10 @@
         "@types/node": "^20.4.2",
         "@types/react": "^18.2.15",
         "@types/react-dom": "^18.2.7",
-        "@types/react-redux": "^7.1.25",
+        "@types/react-redux": "^7.1.33",
         "@types/react-router-dom": "^5.3.3",
         "@types/react-slick": "^0.23.10",
-        "@types/redux-mock-store": "^1.0.3",
+        "@types/redux-mock-store": "^1.0.6",
         "@vitejs/plugin-react-swc": "^3.7.0",
         "babel-preset-vite": "^1.1.3",
         "browser-sync": "^2.29.3",
