--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
     "version": "1.0.0b6",
     "private": true,
     "dependencies": {
-        "@babel/core": "^7.16.0",
+        "@babel/core": "^7.25.2",
         "@genialis/resolwe": "17.2.0",
         "@mui/icons-material": "^5.16.7",
         "@mui/material": "^5.16.7",
-        "@mui/styled-engine-sc": "^5.14.12",
-        "@react-hook/resize-observer": "^1.2.6",
+        "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+        "@react-hook/resize-observer": "^2.0.2",
         "@reduxjs/toolkit": "^2.2.7",
         "@sentry/browser": "^7.59.2",
         "@types/lz-string": "^1.5.0",
-        "@types/react-grid-layout": "^1.3.2",
-        "@types/uuid": "^9.0.2",
+        "@types/react-grid-layout": "^1.3.5",
+        "@types/uuid": "^10.0.0",
         "ag-grid-community": "29.3.5",
         "ag-grid-react": "29.3.5",
         "babel-jest": "^27.4.2",
@@ -32,17 +32,17 @@
         "prompts": "^2.4.2",
         "react": "^18.2.0",
         "react-cookie-consent": "^8.0.1",
-        "react-dom": "^18.2.0",
-        "react-grid-layout": "^1.3.4",
+        "react-dom": "^18.3.1",
+        "react-grid-layout": "^1.4.4",
         "react-redux": "^9.1.2",
-        "react-router-dom": "^6.14.2",
+        "react-router-dom": "^6.26.0",
         "react-slick": "^0.29.0",
         "redux": "^5.0.1",
         "redux-observable": "^3.0.0-rc.2",
         "rxjs": "^7.8.1",
         "slick-carousel": "^1.8.1",
         "styled-components": "^6.1.12",
-        "uuid": "^9.0.0",
+        "uuid": "^10.0.0",
         "vega": "^5.22.1",
         "vega-tooltip": "^0.28.0"
     },
@@ -140,13 +140,13 @@
         "@testing-library/react": "^14.0.0",
         "@types/jest": "^29.5.3",
         "@types/jsdom": "^21.1.1",
-        "@types/lodash": "^4.14.195",
-        "@types/node": "^20.4.2",
+        "@types/lodash": "^4.17.7",
+        "@types/node": "^22.2.0",
         "@types/react": "^18.2.15",
-        "@types/react-dom": "^18.2.7",
+        "@types/react-dom": "^18.3.0",
         "@types/react-redux": "^7.1.33",
         "@types/react-router-dom": "^5.3.3",
-        "@types/react-slick": "^0.23.10",
+        "@types/react-slick": "^0.23.13",
         "@types/redux-mock-store": "^1.0.6",
         "@vitejs/plugin-react-swc": "^3.7.0",
         "babel-preset-vite": "^1.1.3",
@@ -178,8 +178,8 @@
         "react-dev-utils": "^12.0.1",
         "redux-mock-store": "^1.5.4",
         "sass": "^1.77.8",
-        "typescript": "^4.9.3",
-        "typescript-eslint": "8.0.1",
+        "typescript": "^5.5.4",
+        "typescript-eslint": "8.1.0",
         "vite": "^5.4.0",
         "vite-plugin-svgr": "^4.2.0",
         "vite-tsconfig-paths": "^5.0.1"
