--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,8 +2,6 @@ name: Dictyexpress-js build
 
 on:
   push:
-    branches:
-      - master
     tags:
       - "[0-9]+.[0-9]+.[0-9]+*"
   workflow_dispatch:
@@ -16,11 +14,11 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: arc-runner
     steps:
       - uses: actions/checkout@v4
       - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -48,9 +46,6 @@ jobs:
       - name: Install NPM packages
         run: yarn
       - name: Build bundle
-        env:
-          VITE_APP_DEPLOY_ENV: "staging"
-          VITE_APP_COMMIT_SHA: ${{ github.sha }}
         run: yarn build
       - name: Compress the build folder
         run: tar -czf ${{ env.FILENAME }} ./build/
