--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,18 +15,23 @@ env:
 jobs:
   build:
     runs-on: arc-runner
+    strategy:
+      matrix:
+        node-version: [20]
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
-      - name: Use Node.js ${{ env.NODE_VERSION }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
+      - name: Select Node v${{ env.NODE_VERSION }}
+        shell: bash -l {0}
+        run: |
+          nvm use ${{ env.NODE_VERSION }}
+          echo "PATH=$(echo $PATH)" >> "$GITHUB_ENV"
       - name: Generate environment variables
         run: |
           # All triggers.
@@ -46,6 +51,9 @@ jobs:
       - name: Install NPM packages
         run: yarn
       - name: Build bundle
+        env:
+          VITE_APP_VERSION: ${{ env.VERSION }}
+          NODE_OPTIONS: "--max_old_space_size=4096"
         run: yarn build
       - name: Compress the build folder
         run: tar -czf ${{ env.FILENAME }} ./build/
