--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "dicty-express",
-    "version": "1.0.0",
+    "version": "1.0.1a1",
     "private": true,
     "dependencies": {
         "@genialis/resolwe": "17.2.0",
