--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ env:
 
 jobs:
   build:
-    runs-on: arc-runner
+    runs-on: ${{ vars.DOCKER_RUNNER_SCALE_SET || 'private-docker-runner' }}
     strategy:
       matrix:
         node-version: [20]
