--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   test:
-    runs-on: arc-runner
+    runs-on: ${{ vars.DOCKER_RUNNER_SCALE_SET || 'private-docker-runner' }}
     strategy:
       matrix:
         node-version: [20]
