--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ env:
 
 jobs:
   artifact:
-    runs-on: arc-runner
+    runs-on: ${{ vars.DOCKER_RUNNER_SCALE_SET || 'private-docker-runner' }}
     outputs:
       bundle-artifact: ${{ steps.bundle-artifact-upload-step.outputs.artifact-id }}
       django-static: ${{ steps.django-static-upload-step.outputs.artifact-id }}
@@ -70,7 +70,7 @@ jobs:
           overwrite: true
 
   build:
-    runs-on: arc-runner
+    runs-on: ${{ vars.DOCKER_RUNNER_SCALE_SET || 'private-docker-runner' }}
     needs: artifact
     steps:
       - name: Download bundle artifact
