--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "dicty-express",
-    "version": "1.1.0a1",
+    "version": "1.1.0",
     "private": true,
     "dependencies": {
         "@genialis/resolwe": "17.2.0",
